--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "eslint": "^4.19.1",
+    "express": "^4.16.3",
+    "express-generator": "^4.16.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
